--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -1,35 +1,35 @@
-name: Laravel CI
+name: Laravel
+
 on:
+  push:
+    branches: [ "master" ]
   pull_request:
-    branches: [ master, develop ]
+    branches: [ "master" ]
+
 jobs:
   laravel-tests:
+
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Copy .env.example to .env
+    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+      with:
+        php-version: '8.3'
+    - uses: actions/checkout@v4
+    - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install composer dependencies
-      run: composer install
-    - name: Set required directory permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Generate encryption key
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Generate key
       run: php artisan key:generate
-    - name: Create temporary sqlite database
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
+    - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
-    - name: Run laravel database migrations
+    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: php artisan migrate --force
-    - name: Install NPM dependencies
-      run: npm install
-    - name: Minify CSS and JS files
-      run: npm run prod
-    - name: Run unit tests via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: ./vendor/bin/phpunit
+      run: php artisan test
